Solved small conflicts and edited some classes for correctness